--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.21.0",
+    "echarts": "^4.9.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
